# kolizja

./: CMakeLists.txt  README.md  main.cpp
include/: circle.hpp  rectangle.hpp
source/: circle.cpp  rectangle.cpp
